# prozorro-catalog

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  auth.ini  docker-compose.yml  htpasswd  mkdocs.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: docs.yml
cron/: README.md  activate_banned_vendors.py  cron.txt  import_drlz_products.py  inactivate_products_task.py  related_profiles_task.py
docs/: index.md
docs/crowdsourcing/: README.md  entities.puml  sequences.puml
docs/tags/: README.md
docs/vendor_products/: README.md
docs/vendor_to_crowdsourcing/: README.md  plan.md
helm/prozorro-catalog/: Chart.yaml  values.yaml
helm/prozorro-catalog/configs/: auth.ini
helm/prozorro-catalog/templates/: NOTES.txt  _helpers.tpl  crawler-deployment.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
migrations/: cs_12095_hash_requirement_ids.py  cs_12110_remove_codes.py  cs_12300_replace_anyof_with_expected_values.py
src/catalog/: __init__.py  api.py  auth.py  context.py  crawler.py  db.py  doc_service.py  image.py  logging.py  middleware.py  migration.py  price_history.py  prices.py  rename_owner.py  serialization.py  settings.py  swagger.py  utils.py  validations.py
src/catalog/analyzers/: cs_13264_broken_req_responses.py
src/catalog/handlers/: base.py  base_ban.py  base_criteria.py  base_document.py  category.py  general.py  image.py  offer.py  price.py  product.py  product_document.py  profile.py  search.py  tags.py  vendor.py  vendor_ban.py  vendor_ban_document.py  vendor_document.py  vendor_product.py  vendor_product_document.py
src/catalog/migrations/: cs_11945_profiles_agreement_id.py  cs_12095_hash_requirement_ids.py  cs_12110_remove_codes.py  cs_12300_replace_anyof_with_expected_values.py  cs_13101_related_profile_to_list.py  cs_13182_product_requirements_id_to_title.py  cs_13265_add_relatedCategory_to_products.py  cs_13375_update_local_profile_2023.py  cs_13713_offers_to_hidden.py  cs_13762_set_agreementID_to_profile.py  cs_15202_migrate_requirement_expected_value_to_values.py  cs_15349_update_localization_2024.py  cs_15522_profiles_date_created.py  cs_16302_update_unit_code_for_specific_owner.py  cs_16303_requirement_iso_migration.py  cs_16542_requirement_iso_profiles.py  cs_16903_procurement_entity_to_administrator.py  cs_16971_localization_criteria.py  cs_16972_tech_feature_criteria.py  cs_16982_vendor_product_to_hidden.py  cs_17177_products_to_hidden_lowers_3_documents.py  cs_17332_expected_items.py  cs_17668_standartize_requirements.py  cs_17676_remove_descriptions.py  cs_17793_remove_unit_from_requirements.py  cs_17864_set_is_archived_for_requirements.py  cs_17989_comparing_profiles_with_categories.py  cs_18006_localization_categories.py  cs_18012_inactivate_vendor_products.py  cs_18143_change_relatedCategory_for_local_prfiles.py  cs_18454_remove_general_profiles.py  cs_18606_move_unit_to_profile_from_category.py  cs_18754_generate_tokens_for_cpb_categories.py  cs_18810_data_schema_in_local_criteria.py  cs_18827_delete_categories_from_vendor.py  cs_18834_migrate_boolean_responses.py  cs_18855_update_unit_name_in_categories_and_profiles.py  cs_18855_update_unit_name_in_criteria_req.py  cs_18906_migrate_string_responses.py  cs_18917_migrate_int_number_responses.py  (+20 more)
src/catalog/models/: __init__.py  api.py  ban.py  base.py  category.py  common.py  contributor.py  criteria.py  document.py  offer.py  price.py  product.py  product_bid.py  product_request.py  profile.py  search.py  tag.py  user.py  vendor.py
src/catalog/serializers/: ban.py  base.py  contributor.py  document.py  price.py  product.py  product_bid.py  product_request.py  tag.py  vendor.py
src/catalog/state/: ban.py  base.py  category.py  contributor.py  price.py  product.py  product_bid.py  product_request.py  profile.py  vendor.py  vendor_ban.py  vendor_product.py
src/cron/: README.md  activate_banned_vendors.py  calculate_price.py  cron.txt  inactivate_products_task.py  related_profiles_task.py
src/seed/: __main__.py  clear_crawler.py  data.py  product_bids.py
swagger/categories/: collection_get.yaml  get.yaml  patch.yaml  post.yaml  put.yaml
swagger/categories/criterion/: collection_get.yaml  delete.yaml  get.yaml  patch.yaml  post.yaml
swagger/crowd_sourcing/contributors/: collection_get.yaml  get.yaml  post.yaml
swagger/crowd_sourcing/product_requests/: collection_get.yaml  get.yaml
swagger/images/: post.yaml
swagger/offers/: collection_get.yaml  get.yaml  patch.yaml  put.yaml
swagger/products/: collection_get.yaml  get.yaml  patch.yaml  post.yaml  put.yaml
swagger/products/documents/: collection_get.yaml  get.yaml  patch.yaml  post.yaml  put.yaml
swagger/profiles/: collection_get.yaml  get.yaml  patch.yaml  post.yaml  put.yaml
swagger/profiles/criteria/: collection_get.yaml  delete.yaml  (+3 more)
swagger/search/: post.yaml
swagger/vendors/: collection_get.yaml  get.yaml  patch.yaml  post.yaml  sign_get.yaml
tests/: base.py  conftest.py  requirements.txt  utils.py
tests/fixtures/: ban.json  category.json  contributor.json  criteria.json  offer.json  price.json  product.json  product_bid.json  product_request.json  profile.json  tender.json  vendor.json  vendor_product.json
tests/integration/: base.py  conftest.py  test_category.py  test_contributor.py  test_contributor_ban.py  test_contributor_ban_documents.py  test_contributor_document.py  test_db.py  test_image.py  test_migrate_remove_codes.py  test_migrate_requirement_ids.py  test_offer.py  test_price.py  test_product.py  test_product_request.py  test_product_request_documents.py  test_profile_agreements.py  test_profiles.py  test_search.py  test_tags.py  test_vendor.py  test_vendor_ban.py  test_vendor_document.py  test_vendor_product.py  test_vendor_product_document.py  utils.py
tests/migrations/: test_profiles_agreement_id.py
tests/tasks/: test_activate_banned_vendors.py  test_calculate_price.py  test_crawler.py  test_inactivate_products_task.py  test_related_profiles_task.py
(+106 files in other folders)
